--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CHANGE ME</title>
-  </head>
-
-  <body>
-    <!-- All content goes here -->
-    <div id="all-contents">
+<head>
+ <title>Bentley's Amazing Website </title>
+  <link rel="stylesheet" href="styl.css">
+</head>
+<body>
+<div id="all contents">
+ 
+  <nav>
+    <h1> Bentley's Glorious Website</h1>
+    <ul>
+      <li class="nav-li" >
+        <a href="index.html" >home</a>
+      </li>
+      <li class="nav-li">
+        <a href="portfolio.html" >portfolio </a>
+      </li>
+    </ul>
+    </nav>
+  <main>
+    <div>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcKr5jy8rcu5tioUdeZCBdBaWpmA2ejwOmTQ&s">
+    </div>  
+    <div >
       
+    <h2>Bentley </h2>
+  <p> student at david thibodaux STEM magnet academy</p>
+
+    
+  <div id="interests">
+      <h3> Interest</h3>
+   
+      <ul>
+        <li> Soccer</li>
+        <li>Swimming</li>
+        <li>Chilling</li>
+      </ul>
     </div>
-  </body>
+    </div> 
+  </main>
+  </div>
+</body>
 </html>
+
+
