--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <title>Bentley's Amazing Website </title>
-  <link rel="stylesheet" href="styl.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="all contents">
