--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -69,8 +69,8 @@
         //////////////////////////////////////////////////////////////////
 
         // TODO 2 - Variable declarations
-
-
+var positionX = 0
+var points = 0;
 
 
 
@@ -80,10 +80,8 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-
-        
-
-          
+positionX = positionX + 10;
+ moveBoxTo(positionX);         
         }
 
         /**
@@ -94,9 +92,9 @@
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
-
-
-
+positionX = 0;
+changeBoxText(points);
+points = points + 1
 
         }
 
