--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -71,7 +71,7 @@
         // TODO 2 - Variable declarations
 var positionX = 0
 var points = 0;
-
+var speed =10
 
 
         /**
@@ -80,8 +80,13 @@ var points = 0;
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-positionX = positionX + 10;
- moveBoxTo(positionX);         
+positionX = positionX + speed;
+ moveBoxTo(positionX);   
+ if(positionX > boardWidth){
+     speed = speed*-1               
+ }
+
+      
         }
 
         /**
@@ -95,7 +100,7 @@ positionX = positionX + 10;
 positionX = 0;
 changeBoxText(points);
 points = points + 1
-
+speed = speed + 3
         }
 
 
