--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -85,6 +85,10 @@ positionX = positionX + speed;
  if(positionX > boardWidth){
      speed = speed*-1               
  }
+if(positionX < 0){
+speed *= -1
+      }
+
 
       
         }
@@ -102,6 +106,7 @@ changeBoxText(points);
 points = points + 1
 speed = speed + 3
         }
+
 
 
         
